--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ navbar-links:
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: "/situations-site/img/pastillilabs.png"
+title-img: "/img/pastillilabs.png"
 
 # --- Background colour/image options --- #
 
