--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: "/img/pastillilabs.png"
+title-img: "/assets/img/pastillilabs.png"
 
 
 # --- Footer options --- #
