--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,7 @@ title-img: "/assets/img/pastillilabs.png"
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "support@pastillilabs.com"
+  rss: true  # remove this line if you don't want to show an RSS link at the bottom
   facebook: situationsapp
   github: pastillilabs
   twitter: situationsapp
@@ -71,9 +72,10 @@ social-network-links:
 #  mastodon: instance.url/@username
 #  ORCID: your ORCID ID
 #  google-scholar: your google scholar
+#  discord: invite/invite_code or users/userid 
 
-# If you want to show a link to an RSS in the footer, add the site description here.
-# If you don't want to show an RSS link, remove the following line.
+# If you want your website to generate an RSS feed, provide a description
+# The URL for the feed will be https://<your_website>/feed.xml
 rss-description: Situations News
 
 # --- General options --- #
