--- a/_config.yml
+++ b/_config.yml
@@ -66,8 +66,9 @@ social-network-links:
   twitter: situationsapp
 #  patreon: DeanAttali
 #  youtube: c/daattali
+#  whatsapp: 15551212
 #  medium: yourname
-#  reddit: yourname
+#  reddit: yourname or r/yoursubreddit
   linkedin: pastillilabs
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
@@ -81,12 +82,15 @@ social-network-links:
 #  telegram: yourname
 #  calendly: yourname
 #  mastodon: instance.url/@username
+#  bluesky: yourname
 #  ORCID: your ORCID ID
 #  google-scholar: your google scholar
-#  discord: "invite_code" or "users/userid" or "invite/invite_code" 
+#  discord: "invite_code" or "users/userid" or "invite/invite_code"
 #  kaggle: yourname
 #  hackerrank: yourname
 #  gitlab: yourname
+#  itchio: yourname
+#  untappd: yourname
 
 # If you want your website to generate an RSS feed, provide a description
 # The URL for the feed will be https://<your_website>/feed.xml
